# Semantic-Machine

./: Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  config.env.template
.cargo/: audit.toml
.github/workflows/: audit.yml  pre-checks.yml
apps/api-server/: Cargo.toml  config.env.template
apps/api-server/migrations/: 20250927142752_solana_user.sql  20250928140916_rss_feeds.sql
apps/api-server/src/: auth.rs  config.rs  constants.rs  database.rs  domain.rs  handlers_v1.rs  main.rs  message_queue.rs  middleware_v1.rs  models.rs  telemetry.rs
apps/rss-worker/: Cargo.toml
apps/rss-worker/src/: config.rs  main.rs  processor.rs  telemetry.rs
apps/telegram-worker/: Cargo.toml
apps/telegram-worker/src/: config.rs  main.rs
crates/llm-bert/: Cargo.toml
crates/llm-bert/src/: lib.rs  sentiment.rs
crates/nats-middleware/: Cargo.toml
crates/nats-middleware/src/: lib.rs
crates/redis-middleware/: Cargo.toml
crates/redis-middleware/src/: lib.rs
crates/shared-states/: Cargo.toml
crates/shared-states/src/: article.rs  lib.rs  rss.rs
dependencies/: docker-compose.yml
dependencies/prometheus/: prometheus.yml
