[workspace]

members = ["crates/*", "apps/*"]
resolver = "2"

[workspace.dependencies]
paste = "1.0.15"
anyhow = "1.0.100"
dirs = "6.0.0"
rand = "0.9.2"
tokio = { version = "1.47.1", features = ["full"] }
futures = "0.3.31"
actix-web = "4.11.0"
actix-cors = "0.7.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.3.1"
chrono = { version = "0.4.42", features = ["serde"] }
utoipa = { version = "5.4.0", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
bs58 = { version = "0.5.1", features = ["alloc"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
log = "0.4.28"
actix-web-prom = "0.10.0"
opentelemetry = "0.31.0"
opentelemetry-jaeger = { version = "0.22.0", features = [
    "rt-tokio",
    "collector_client",
] }
opentelemetry-prometheus = "0.29.1"
opentelemetry_sdk = { version = "0.31.0", features = [
    "rt-tokio",
    "rt-tokio-current-thread",
] }
tracing-opentelemetry = "0.31"
tracing-actix-web = "0.7.19"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
prometheus = "0.14.0"
opentelemetry-otlp = "0.31.0"
thiserror = "2.0.17"
sys-info = "0.9.1"
tonic = "0.14.2"
async-trait = "0.1.89"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "tls-rustls-ring-webpki",
    "postgres",
] }
rand_core = "0.9.3"
validator = { version = "0.20.0", features = ["derive"] }
lazy_static = "1.5.0"
getset = "0.1.6"
sha2 = "0.10.9"
hex = "0.4.3"
ed25519-dalek = "2.2.0"
base64 = "0.22.1"
async-nats = "0.43.1"
tokio-test = "0.4.4"
hmac = "0.12.1"
reqwest = { version = "0.12.23", features = ["json"] }
rss = "2.0.12"
scraper = "0.24.0"
regex = "1.11.3"
redis = { version = "0.32.6", features = ["tokio-comp"] }

llm-bert = { path = "crates/llm-bert" }
nats-middleware = { path = "crates/nats-middleware" }
shared-states = { path = "crates/shared-states" }
redis-middleware = { path = "crates/redis-middleware" }