[package]
name = "api-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { workspace = true }
actix-cors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
chrono = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
dotenvy = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
prometheus = { workspace = true }
actix-web-prom = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-jaeger = { workspace = true }
opentelemetry-prometheus = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-actix-web = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
validator = { workspace = true }
ed25519-dalek = { workspace = true }
bs58 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
nats-middleware = { workspace = true }
