[package]
name = "rss-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
rss = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
shared-states = { workspace = true }
nats-middleware = { workspace = true }